# mnist-discriminator

./: .gitignore  Pipfile  README.md  mypy.ini  pyproject.toml
src/core/: network.py
src/core/layer/: affine.py  affine_test.py  relu.py  relu_test.py  softmax.py
src/service/: dataset.py  lab.py
src/tasks/: download.py  mock.py  test.py
src/utils/: archive.py  download_url.py
